ffi/derive/tests/ui_fail/fieldless_enum_with_one_variant.rs
use iroha_ffi::FfiType;

/// Enum
#[derive(FfiType)]
pub enum FfiStruct {
    Variant1
}

fn main() {}
